<resources>
    <string name="app_name_main">  #CleanMaster</string>
    <string name="app_name">CleanMaster</string>
    <string name="account_name">@string/app_name</string>
    <string name="account_type">com.jcbw.clean888.cleansuper.main.android.android.account.type</string>
    <string name="k_auth">com.jcbw.clean888.cleansuper.main.android.account.authoritys</string>
    <string name="k_provi">com.jcbw.clean888.cleansuper.main.data.sync.providers</string>
    <string name="k_types">com.jcbw.clean888.cleansuper.main.android.account.types</string>
    <string name="at">com.jcbw.clean888.cleansuper.main.android.account.type</string>
    <string name="aah">com.jcbw.clean888.cleansuper.main.android.account.authority</string>
    <string name="aahp">com.jcbw.clean888.cleansuper.main.data.sync.provider</string>
    <string name="nm_clean">Clean</string>
    <string name="nm_clean_now">Clean Now</string>
    <string name="nm_fun_large_file_clean">Large File Cleaner</string>
    <string name="nm_fun_phone_boost">Phone Boost</string>
    <string name="nm_fun_security">Security</string>
    <string name="nm_privacy_policy">Privacy Policy</string>
    <string name="nm_scan_now">Scan Now</string>
    <string name="nm_terms_of_service">Terms of Service</string>
    <string name="nm_yes">Yes</string>
    <string name="nm_fun_battery_saver">Battery Saver</string>
    <string name="nm_fun_cpu_cool">CPU Cooler</string>
    <string name="nm_fun_junk_clean">Junk Clean</string>
    <string name="nv_title_more">More Tools</string>
    <string name="nv_title_more_short">More Tools</string>
    <string name="nm_go">Go</string>
    <string name="nm_hot">HOT</string>
    <string name="setting_quick_boost_t1">Set Quick Boost on wallpaper and boost anytime!</string>
    <string name="nv_title_home">Home</string>
    <string name="nv_title_me">Me</string>
    <string name="an">Super Phone Cleaner</string>
    <string name="k_name">@string/app_name</string>
    <string name="nm_ok">OK</string>
    <string name="nm_stop">Stop</string>
    <string name="nm_continue">Continue</string>
    <string name="nm_cancel">Cancel</string>
    <string name="nm_optimize">Optimize</string>
    <string name="nm_later">Later</string>
    <string name="turn_on">Enable</string>
    <string name="improve">@string/nm_optimize</string>
    <string name="improve_later">@string/nm_later</string>
    <string name="n_boost">Boost</string>
    <string name="n_cpu">CPU Cooler</string>
    <string name="n_junk_clean">Junk Clean</string>
    <string name="n_security">Security</string>
    <string name="n_battery">Battery</string>
    <string name="flash_light">Flashlight</string>
    <string name="nm_exit">Exit</string>
    <string name="nm_start">Start</string>
    <string name="wallpaper_are">Are you sure?</string>
    <string name="wallpaper_boost">Boost</string>
    <string name="wallpaper_on">Quick Boost is on!</string>
    <string name="wallpaper_quick">Quick</string>
    <string name="wallpaper_ready">Quick Boost is ready!</string>
    <string name="wallpaper_remove">Turn off Quick Boost Wallpaper? Keep it on and make boosting your phone handy.</string>
    <string name="wallpaper_setting">You can turn it off in Settings.</string>
    <string name="wallpaper_subtitle">Set Quick Boost on wallpaper\n and boost anytime!</string>
    <string name="wallpaper_title">Quick Boost Wallpaper</string>
    <string name="watermark_label_prefix">AdMob - </string>
    <string name="widget">Widget</string>
    <string name="widget_4_1">4x1 Widget</string>
    <string name="widget_4_2">4x2 Widget</string>
    <string name="widget_add_home">Add to home screen</string>
    <string name="widget_clean">Clean</string>
    <string name="widget_cool">Cool</string>
    <string name="widget_save">Save</string>
    <string name="main_home_junk_op">@string/nm_clean</string>
    <string name="main_home_junk_size">Trash size</string>
    <string name="main_home_large_file_cleaner">@string/nm_fun_large_file_clean</string>
    <string name="main_home_large_file_size">File size</string>
    <string name="main_home_large_storage_used">Storage used</string>
    <string name="main_home_phone_boost">@string/nm_fun_phone_boost</string>
    <string name="main_home_ram_used">Ram used</string>
    <string name="main_home_virus_preventing_risk">Preventing Risk</string>
    <string name="main_home_virus_scan">Virus Scanning</string>
    <string name="main_home_virus_security">@string/nm_fun_security</string>
    <string name="main_me_about">About us</string>
    <string name="main_me_days">days</string>
    <string name="main_me_has_protected_you_for">has protected you for</string>
    <string name="main_me_privacy_policy">@string/nm_privacy_policy</string>
    <string name="main_me_settings">Settings</string>
    <string name="main_me_terms_of_service">@string/nm_terms_of_service</string>
    <string name="main_more_battery_saver">@string/nm_fun_battery_saver</string>
    <string name="main_more_cpu_cool">@string/nm_fun_cpu_cool</string>
    <string name="main_more_hot_tools">Hot Tools</string>
    <string name="main_more_junk_clean">@string/nm_fun_junk_clean</string>
    <string name="main_more_large_file_cleaner">@string/nm_fun_large_file_clean</string>
    <string name="main_more_phone_boost">@string/nm_fun_phone_boost</string>
    <string name="main_more_phone_optimize">Phone Optimize</string>
    <string name="main_more_top_title">@string/nv_title_more</string>
    <string name="main_more_virus_scan">@string/nm_fun_security</string>
    <string name="doing_cleaning">Cleaning…</string>
    <string name="clean_btn_op_del">@string/nm_clean</string>
    <string name="nm_optimized_finish">Optimized</string>
    <string name="clean_finish_cleaning">@string/doing_cleaning</string>
    <string name="clean_finish_msg">%s junk files have been cleaned up!</string>
    <string name="clean_finish_state">@string/nm_optimized_finish</string>
    <string name="clean_finish_title">@string/nm_fun_junk_clean</string>
    <string name="clean_item_title2">Partition cache</string>
    <string name="clean_progress_ready_clean">%s will not delete your private data.</string>
    <string name="doing_searching">Searching…</string>
    <string name="clean_progress_scan">@string/doing_searching</string>
    <string name="clean_title">@string/nm_fun_junk_clean</string>
    <string name="clean_type_title1">App Cache</string>
    <string name="clean_type_title2">App Residual</string>
    <string name="clean_type_title3">Apk Files</string>
    <string name="clean_type_title4">Temp Files</string>
    <string name="clean_type_title5">Log Files</string>
    <string name="clean_type_title6">AD Junk</string>
    <string name="clean_type_title7">System Cache</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="close_drawer">Close navigation menu</string>
    <string name="close_sheet">Close sheet</string>
    <string name="nm_boosted">Boosted</string>
    <string name="boost_finish_msg">%s background running apps have been optimized!</string>
    <string name="boost_finish_state">@string/nm_boosted</string>
    <string name="boost_finish_title">@string/nm_fun_phone_boost</string>
    <string name="large_file_finish_msg">%s Space Saved!</string>
    <string name="large_file_finish_state">@string/nm_optimized_finish</string>
    <string name="large_file_finish_title">@string/nm_fun_large_file_clean</string>
    <string name="antivirus_finish_msg">%s packages have been scanned and no risk found!</string>
    <string name="antivirus_finish_state">Safe</string>
    <string name="antivirus_finish_title">@string/nm_fun_security</string>
    <string name="cpu_cool_cooling_down">Cooling down…</string>
    <string name="cpu_cool_finish_msg">The CPU state is optimized and the phone will run at its best!</string>
    <string name="cpu_cool_finish_state">Cooled Down</string>
    <string name="cpu_cool_finish_title">@string/nm_fun_cpu_cool</string>
    <string name="cpu_cool_title">@string/nm_fun_cpu_cool</string>
    <string name="battery_finish_state">@string/nm_optimized_finish</string>
    <string name="battery_finish_title">@string/nm_fun_battery_saver</string>
    <string name="battery_finish_msg">Battery-hungry programs have been optimized!</string>
    <string name="battery_title">@string/nm_fun_battery_saver</string>
    <string name="battery_analyzing_power_usage">Analyzing power usage…</string>
    <string name="app_scan_title">App Scan</string>
    <string name="app_scan_finish_msg">The newly installed application %s is safe.</string>
    <string name="app_scan_finish_state">Scan complete</string>
    <string name="app_scan_finish_title">@string/app_scan_title</string>
    <string name="title_notification_clean">Notification Cleaner</string>
    <string name="notification_clean_finish_msg">%s notification removed.</string>
    <string name="notification_clean_finish_tap">Cleaned!</string>
    <string name="stop_dialog_text">The scan will be completed soon. Would you like to continue?</string>
    <string name="stop_dialog_stop">@string/nm_stop</string>
    <string name="stop_dialog_keep_going">@string/nm_continue</string>
    <string name="doing_optimizing">Optimizing…</string>
    <string name="large_file_title">@string/nm_fun_large_file_clean</string>
    <string name="large_file_op_del">@string/nm_delete</string>
    <string name="nm_delete">Delete</string>
    <string name="large_file_scan_msg">Scanning Large Files…</string>
    <string name="large_file_me_sort_title">Orderly arrangement</string>
    <string name="large_file_me_sort_1">Size (descending)</string>
    <string name="large_file_me_sort_1_d">Size (ascended)</string>
    <string name="large_file_me_sort_2">File name (A to Z)</string>
    <string name="large_file_me_sort_2_d">File name (Z to A)</string>
    <string name="large_file_me_type_audio">Audio</string>
    <string name="large_file_me_type_doc">Document</string>
    <string name="large_file_me_type_image">Picture</string>
    <string name="large_file_me_type_other">Others</string>
    <string name="large_file_me_type_video">Video</string>
    <string name="large_file_me_type_zip">Compressed files</string>
    <string name="large_file_me_type_all">All types</string>
    <string name="large_file_me_type_apk">Apk</string>
    <string name="large_file_me_type2">Select Types</string>
    <string name="setting_quick_boost">Quick Boost</string>
    <string name="setting_title">@string/main_me_settings</string>
    <string name="setting_notification">Notification</string>
    <string name="setting_notification_t2">Notification Toolbar Toggle</string>
    <string name="setting_notification_t3">Display the Toolbar in Notification</string>
    <string name="setting_boost">Boost</string>
    <string name="setting_auto_boost">Auto Boost</string>
    <string name="setting_auto_boost_t1">Automatically optimized and speed up your device when necessary</string>
    <string name="setting_charge_boost">Charging Improver</string>
    <string name="setting_charge_boost_t1">Check all problem that reduce battery life</string>
    <string name="setting_shake_boost">Shake Boost</string>
    <string name="setting_shake_boost_t1">Shake your mobile then it will boost</string>
    <string name="setting_sensitivity">Sensitivity</string>
    <string name="setting_sensitivity_mid">Mid</string>
    <string name="setting_clean">Clean</string>
    <string name="setting_uninstall_clean_t1">Uninstall Residual Junk Removal</string>
    <string name="setting_uninstall_clean_t2">Get a reminder to remove residual Junk after an APP uninstalled</string>
    <string name="setting_advanced">Advanced</string>
    <string name="setting_install_scan_t1">New App Scan</string>
    <string name="setting_install_scan_t2">Get a reminder when an APP installed</string>
    <string name="nm_no">No</string>
</resources>