<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/back"
        android:padding="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:src="@mipmap/icon_back"
        android:tint="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/SelectedItemBorderless"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/setting_title"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toBottomOf="@+id/back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toEndOf="@+id/back"
        app:layout_constraintTop_toTopOf="@+id/back"/>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:overScrollMode="never"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/back">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="25dp">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/notification"
                android:background="@color/white"
                android:padding="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent">
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/notification_t1"
                    android:text="@string/setting_notification"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    style="@style/settings_card_t1"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/notification_t2"
                    android:text="@string/setting_notification_t2"
                    app:layout_constraintEnd_toStartOf="@+id/notification_switch"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/notification_t1"
                    style="@style/settings_card_t2"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/notification_t3"
                    android:text="@string/setting_notification_t3"
                    android:layout_marginEnd="3dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/notification_switch"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/notification_t2"
                    style="@style/settings_card_t3"/>
                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/notification_switch"
                    android:layout_marginEnd="3dp"
                    app:layout_constraintBottom_toBottomOf="@+id/notification_t3"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/notification_t2"
                    app:track="@drawable/shape_settings_track"
                    style="@style/settings_card_switch_widget"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/boost"
                android:background="@color/white"
                android:padding="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@+id/notification">
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/boost_title"
                    android:text="@string/setting_boost"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    style="@style/settings_card_t1"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/auto_boost"
                    android:text="@string/setting_auto_boost"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/boost_title"
                    style="@style/settings_card_t2"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/auto_boost_t1"
                    android:text="@string/setting_auto_boost_t1"
                    android:layout_marginEnd="3dp"
                    app:layout_constraintEnd_toStartOf="@+id/auto_boost_switch"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/auto_boost"
                    style="@style/settings_card_t3"/>
                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/auto_boost_switch"
                    android:layout_marginEnd="3dp"
                    app:layout_constraintBottom_toBottomOf="@+id/auto_boost_t1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/auto_boost"
                    app:track="@drawable/shape_settings_track"
                    style="@style/settings_card_switch_widget"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/charge_boost"
                    android:text="@string/setting_charge_boost"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/auto_boost_t1"
                    style="@style/settings_card_t2"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/charge_boost_t1"
                    android:text="@string/setting_charge_boost_t1"
                    android:layout_marginEnd="3dp"
                    app:layout_constraintEnd_toStartOf="@+id/charge_boost_switch"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/charge_boost"
                    style="@style/settings_card_t3"/>
                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/charge_boost_switch"
                    android:layout_marginEnd="3dp"
                    app:layout_constraintBottom_toBottomOf="@+id/charge_boost_t1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/charge_boost"
                    app:track="@drawable/shape_settings_track"
                    style="@style/settings_card_switch_widget"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/quick_boost"
                    android:text="@string/setting_quick_boost"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/charge_boost_t1"
                    style="@style/settings_card_t2"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/quick_boost_t1"
                    android:text="@string/setting_quick_boost_t1"
                    android:layout_marginEnd="3dp"
                    app:layout_constraintEnd_toStartOf="@+id/quick_boost_switch"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/quick_boost"
                    style="@style/settings_card_t3"/>
                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/quick_boost_switch"
                    android:layout_marginEnd="3dp"
                    app:layout_constraintBottom_toBottomOf="@+id/quick_boost_t1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/quick_boost"
                    app:track="@drawable/shape_settings_track"
                    style="@style/settings_card_switch_widget"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/shake_boost"
                    android:text="@string/setting_shake_boost"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/quick_boost_t1"
                    style="@style/settings_card_t2"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/shake_boost_t1"
                    android:text="@string/setting_shake_boost_t1"
                    android:layout_marginEnd="3dp"
                    app:layout_constraintEnd_toStartOf="@+id/shake_boost_switch"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/shake_boost"
                    style="@style/settings_card_t3"/>
                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/shake_boost_switch"
                    android:layout_marginEnd="3dp"
                    app:layout_constraintBottom_toBottomOf="@+id/shake_boost_t1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/shake_boost"
                    app:track="@drawable/shape_settings_track"
                    style="@style/settings_card_switch_widget"/>
                <androidx.constraintlayout.widget.Group
                    android:id="@+id/sensitivity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:constraint_referenced_ids="sensitivity_t,sensitivity_state,sensitivity_go"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/sensitivity_t"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp"
                    android:layout_marginTop="17dp"
                    android:text="@string/setting_sensitivity"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/sensitivity_state"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/shake_boost_t1"
                    style="@style/settings_card_t2"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:textColor="#1a73e8"
                    android:id="@+id/sensitivity_state"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setting_sensitivity_mid"
                    android:layout_marginEnd="3dp"
                    app:layout_constraintBottom_toBottomOf="@+id/sensitivity_go"
                    app:layout_constraintEnd_toStartOf="@+id/sensitivity_go"
                    app:layout_constraintTop_toTopOf="@+id/sensitivity_go"/>
                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/sensitivity_go"
                    android:background="@mipmap/icon_go"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    app:layout_constraintBottom_toBottomOf="@+id/sensitivity_t"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/sensitivity_t"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clean"
                android:background="@color/white"
                android:padding="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@+id/boost">
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/uninstall_clean"
                    android:text="@string/setting_clean"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    style="@style/settings_card_t1"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/uninstall_clean_t1"
                    android:text="@string/setting_uninstall_clean_t1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/uninstall_clean"
                    style="@style/settings_card_t2"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/uninstall_clean_t2"
                    android:text="@string/setting_uninstall_clean_t2"
                    android:layout_marginEnd="3dp"
                    app:layout_constraintEnd_toStartOf="@+id/uninstall_clean_switch"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/uninstall_clean_t1"
                    style="@style/settings_card_t3"/>
                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/uninstall_clean_switch"
                    android:layout_marginEnd="3dp"
                    app:layout_constraintBottom_toBottomOf="@+id/uninstall_clean_t2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/uninstall_clean_t1"
                    app:track="@drawable/shape_settings_track"
                    style="@style/settings_card_switch_widget"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/advanced"
                android:background="@color/white"
                android:padding="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintBottom_toTopOf="@+id/view"
                app:layout_constraintTop_toBottomOf="@+id/clean">
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/advanced_t"
                    android:text="@string/setting_advanced"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    style="@style/settings_card_t1"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/install_scan_t1"
                    android:text="@string/setting_install_scan_t1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/advanced_t"
                    style="@style/settings_card_t2"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/install_scan_t2"
                    android:text="@string/setting_install_scan_t2"
                    android:layout_marginEnd="3dp"
                    app:layout_constraintEnd_toStartOf="@+id/install_scan_switch"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/install_scan_t1"
                    style="@style/settings_card_t3"/>
                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/install_scan_switch"
                    android:layout_marginEnd="3dp"
                    app:layout_constraintBottom_toBottomOf="@+id/install_scan_t2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/install_scan_t1"
                    app:track="@drawable/shape_settings_track"
                    style="@style/settings_card_switch_widget"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
            <View
                android:id="@+id/view"
                android:layout_width="1dp"
                android:layout_height="30dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/advanced"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>