<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="56dp">
        <ImageView
            android:layout_gravity="center"
            android:id="@+id/wallpaper_back_img"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:src="@mipmap/ic_back_black"
            android:scaleType="center"/>
        <TextView
            android:textSize="15dp"
            android:textStyle="bold"
            android:textColor="#333333"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="31dp"
            android:text="@string/setting_quick_boost"/>
    </LinearLayout>
    <ImageView
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="87.33dp"
        android:src="@mipmap/img_list"/>
    <TextView
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36.66dp"
        android:text="@string/wallpaper_on"/>
    <TextView
        android:textSize="15dp"
        android:textColor="#999999"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36.66dp"
        android:text="@string/wallpaper_setting"/>
</LinearLayout>
