<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/dialog_bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_gravity="center"
        android:id="@+id/bg"
        android:background="@drawable/shape_dialog_bg"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp">
        <TextView
            android:textSize="15sp"
            android:textColor="#ff333333"
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:text="@string/wallpaper_remove"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
        <TextView
            android:textSize="16sp"
            android:textColor="#999999"
            android:gravity="center"
            android:id="@+id/stop"
            android:padding="10dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/nm_yes"
            android:textAllCaps="true"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/keep_going"
            app:layout_constraintEnd_toStartOf="@+id/keep_going"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/keep_going"/>
        <TextView
            android:textSize="16sp"
            android:textColor="#3e84ff"
            android:gravity="center"
            android:id="@+id/keep_going"
            android:padding="10dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="34.7dp"
            android:layout_marginBottom="8dp"
            android:text="@string/nm_no"
            android:textAllCaps="true"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/stop"
            app:layout_constraintTop_toBottomOf="@+id/title"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>